# manette

./: Cargo.toml  README.md  TODO.md
src/: autocomplete.rs  autocompleteview.rs  command.rs  file.rs  lib.rs  main.rs  ui.rs  userenv.rs  view.rs
