[package]
name = "manette"
version = "0.1.0"
authors = ["Paul Ezvan <paul@ezvan.fr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
clap = "2.33"
cursive = "0.16"
cursive_core = "0.2"
cursive-flexi-logger-view = "0.4"
flexi_logger = "0.17"
log = "0.4"
mime_guess = "2.0"
unicode-segmentation = "1.8.0"
unicode-width = "0.1.0"
